--- a/src/CSS/UserLIst.css
+++ b/src/CSS/UserLIst.css
@@ -42,3 +42,15 @@
   align-items: center;
   margin-top: 20px;
 }
+.Buttons{
+  display: flex;
+  justify-content: space-evenly
+}
+.Button{
+  font-size: larger;
+  padding: .5rem;
+  border-radius: 8px;
+  border: 2px solid gainsboro;
+  background-color: transparent;
+  box-sizing: border-box;
+}
